# raylib_breakout

./: .gitignore  Breakout  CMakeLists.txt  LICENSE  README.md  raylib_breakout.code-workspace
include/: brick.h  common.h  game.h
src/: main.c
